code25_all/scala/2979082.txt
import scala.io.Source

if (args.length > 0) {
    for (line <- Source.fromFile(args(0)).getLines)
        print(line.length + " " + line)
}
else
    Console.err.println("Filename required.")

fromFile
java.io.File
fromPath
    for (line <- Source.fromPath(args(0)).getLines)

... :4: error: missing arguments for method getLines in class Source;
follow this method with `_' if you want to treat it as a partially applied function
Error occurred in an application involving default arguments.
    for (line <- Source.fromPath(args(0)).getLines)
                                          ^
one error found

    for (line <- Source.fromPath(args(0)).getLines _)

getLines
